--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Prueba</title>
 </head>
 <body>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-10 btn btn-danger">Mucho txt</div>
+            <div class="col-2 btn btn-primary"> asd </div>
+        </div>
+    </div>
     
 </body>
 </html>
